#12780 closed bug (fixed)
Filetypes does not enable save menu item on changes to version info
Reported by: | markh | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Preferences/FileTypes | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #5812 | |
Platform: | All |
Description
When changing the version information of a resource in the FileTypes application, the "Save" menu item is not enabled. The FileTypes application does know that the version info has been changed as quitting pops up a question if I want to save my changes.
Attachments (1)
Change History (4)
by , 9 years ago
Attachment: | 0001-12780-FileTypes-enable-save-menu-item-when-changing-.patch added |
---|
comment:1 by , 9 years ago
patch: | 0 → 1 |
---|
comment:2 by , 9 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
comment:3 by , 9 years ago
Blocking: | 5812 added |
---|
Note:
See TracTickets
for help on using tickets.
Applied in hrev50316. Thanks for the patch!