FileTypes: Enable save menu item when changing version information of a resource.

Fixes #12780.

Signed-off-by: Augustin Cavalier <waddlesplash@gmail.com>
Some minor whitespace nits were fixed by me.